# reanimator

./: .gitignore  CHANGELOG.md  Cargo.toml  License.txt  README.md  build.py  build.rs  effect ideas.md  release-plz.toml
.github/workflows/: release-plz.yml
non_workflow/: release-plz.yml
src/: advanced_color_picker.rs  batch_edit.rs  debug_and_logger.rs  ffmpeg_console.rs  fonts.rs  generic_io.rs  generic_node_info.rs  history_tracker.rs  import_export.rs  main.rs  node.rs  popups.rs  project.rs  project_files.rs  project_settings.rs  render_nodes.rs  set1.txt  sidebar.rs  storage.rs  user_info.rs  widgets.rs
src/nodes/: combine_hsv.glsl  combine_hsv.rs  combine_rgba.rs  cover_window.rs  debug.rs  default_image.rs  desktop_capture.rs  detect_motion.rs  dither.glsl  dither.rs  frame_delay.rs  image_io.rs  layer.rs  load_gif.rs  load_image.rs  mod.rs  movement.glsl  node_enum.rs  node_error.rs  pick_random.rs  render_3d.rs  restrict_pallet.rs  scale.rs  split_hsv.glsl  split_hsv.rs  split_rgba.rs  test.glsl  v_cam_out.rs  webcam.rs
src/nodes/basic_shader_nodes/: VHS.glsl  blursp.glsl  crystal.glsl  diff_gaussian.glsl  difference_of_gaussians.rs  dot.glsl  gaussian.glsl  glitch.glsl  greyscale.glsl  greyscale.rs  hue_shift.glsl  invert.rs  mod.rs  order.py  shader_generic.rs  sharp.glsl  solid_color.rs  text_mask.rs
src/nodes/color/: k_mean.rs  mod.rs  restrict_pallet.rs
src/nodes/data/: histogram.rs
src/nodes/input/: apply_path_root.rs  default_image.rs  desktop_capture.rs  fix_desktop_capture.glsl  load_gif.rs  load_image.rs  load_video.rs  mod.rs  render_3d.rs  uv.rs  webcam.rs
src/nodes/mask/: brightness.glsl  brightness_range.glsl  brightness_range.rs  chromakey,rs  color_noise.rs  generic_mask.rs  layer_trail.glsl  layer_trail.rs  logic.rs  mod.rs  multiply.rs  text_mask.rs  white_noise.rs
src/nodes/output/: cover_window.rs  image_io.rs  mod.rs
src/nodes/rgb_hsl/: combine_hsv.glsl  combine_hsv.rs  combine_rgba.rs  mod.rs  split_hsv.glsl  split_hsv.rs  split_rgba.rs
src/nodes/text/: display_text.rs  mod.rs  text_input.rs
src/nodes/transform/: mod.rs  sample_uv.rs  scale.rs
src/nodes/watercolor/: mod.rs  watercolor.glsl  watercolor.rs
src/python/: v_cam.py
src/support/: mod.rs
src/support/resources/icofont/fonts/: icofont.eot
website/: index.html  main.css  main.js
wix/: main.wxs
