[package]
name = "reanimator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

savefile = {version = "0.17.4", features = ["bzip2"]}
savefile-derive = "0.17.4"
fastrand = "2.1.0"
imgui = "0.12.0"

copypasta = "0.8"
glium = { version = "0.34.0", default-features = true }
image = "0.23"
imgui-winit-support = "0.12.0"
imgui-glium-renderer = "0.12.0"
strum = "0.26.2"
strum_macros = "0.26.4"
rfd = "0.14.1"
platform-dirs = "0.3.0"
pac2 = "0.1.0"
dtt = "0.0.6"
file-hashing = "0.1.2"
blake2 = "0.10.6"
comprexor = "0.1.520"
self_update = "0.41.0"
textdistance = "1.0.2"
release-plz = "0.3.75"

[build-dependencies]
winresource = "0.1.17"


[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3


[profile.release]
codegen-units = 1
lto = false
strip = "debuginfo"
panic = "abort"
