[package]
name = "reanimator"
version = "0.1.2"
edition = "2021"
authors = ["Ollie lynas <contactme@ollielynas.com>"]
description = "A gif vfx tool"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
repository = "https://github.com/ollielynas/reanimator"
license = "MIT OR Apache-2.0"

[package.metadata.wix]
upgrade-guid = "3A2AC449-A76D-4C28-B687-6DD30B908380"
path-guid = "D299BE8C-F7C5-4ECF-9E0A-58077FFD095C"
license = "License.txt"

eula = false

[dependencies]

savefile = {version = "0.17.4", features = ["bzip2"]}
savefile-derive = "0.17.4"
fastrand = "2.1.0"
imgui = "0.12.0"

copypasta = "0.8"
glium = { version = "0.34.0", default-features = true }
image = "0.23"
imgui-winit-support = "0.12.0"
imgui-glium-renderer = "0.12.0"
strum = "0.26.2"
strum_macros = "0.26.4"
rfd = "0.14.1"
platform-dirs = "0.3.0"
pac2 = "0.1.0"
dtt = "0.0.6"
file-hashing = "0.1.2"
blake2 = "0.10.6"
comprexor = "0.1.520"
self_update = "0.41.0"
textdistance = "1.0.2"
# release-plz = "0.3.75"
win-msgbox = "0.2.0"

[build-dependencies]
winresource = "0.1.17"


[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3


[profile.release]
codegen-units = 1
lto = false
strip = "debuginfo"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.18.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "upload"
# Whether to install an updater program
install-updater = false
