[package]
name = "reanimator"
version = "0.1.24" 
edition = "2021"
authors = ["Ollie lynas <contactme@ollielynas.com>"]
description = "ReAnimator"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
repository = "https://github.com/ollielynas/reanimator"
license = "MIT OR Apache-2.0"

[package.metadata.wix]
upgrade-guid = "3A2AC449-A76D-4C28-B687-6DD30B908380"
path-guid = "D299BE8C-F7C5-4ECF-9E0A-58077FFD095C"
license = "License.txt"

eula = false

[dependencies]

savefile = {version = "0.17.8", features = ["bzip2"]}
savefile-derive = "0.17.8"
fastrand = "2.1.0"
imgui = "0.12.0"

copypasta = "0.8"
glium = { version = "0.34.0", default-features = true }
image = "0.23"
imgui-winit-support = "0.12.0"
imgui-glium-renderer = "0.12.0"
strum = "0.26.2"
strum_macros = "0.26.4"
rfd = "0.15.0"
platform-dirs = "0.3.0"
dtt = "0.0.6"
file-hashing = "0.1.2"
blake2 = "0.10.6"
comprexor = "0.1.520"
self_update = {version = "0.41.0", features = ["archive-zip"]}
textdistance = "1.0.2"
# release-plz = "0.3.75"
win-msgbox = "0.2.0"
lumo = "0.3.2"
open = "5.3.0"
escapi = "4.0.0"
font-kit = "0.14.1"
win-screenshot = "4.0.11"
regex = "1.10.6"
windows = { version = "0.58.0", features = ["Win32", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_Graphics", "Win32_Graphics_Gdi"] }
numfmt = "1.1.1"
itertools = "0.13.0"
system-extensions = {version = "0.0.4", features = ["dialogues"]}
ffmpeg-sidecar = "1.1.0"
anyhow = "1.0.86"
winapi = {version = "0.3.9", features = ["winbase"]}

log = "0.4.22"
fern = "0.6.2"
humantime = "2.1.0"
trash = "5.1.1"
lazy_static = "1.5.0"
fast-smaz = "0.1.0"
okolors = {version = "0.8.1", features=["threads"]}
enum_to_string = "0.1.0"
serde = "1.0.210"
serde_json = "1.0.128"
hex = "0.4.3"
perf_monitor = "0.2.1"
winreg = "0.52.0"
# inline-c = "0.1.7"

[build-dependencies]
winresource = "0.1.17"
# windows = "0.58.0"


[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3


[profile.release]
codegen-units = 1
lto = false
strip = "debuginfo"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.18.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "upload"
# Whether to install an updater program
install-updater = false
